Closed
Bug 764546
Opened 14 years ago
Closed 14 years ago
Temporary fix for: Hotmail no longer auto-updates (due to "globalStorage" removal)
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
mozilla13
| Tracking | Status | |
|---|---|---|
| firefox13 | + | verified |
| firefox14 | - | unaffected |
| firefox15 | - | unaffected |
People
(Reporter: mayhemer, Assigned: mayhemer)
References
Details
(Keywords: regression)
Attachments
(3 files, 3 obsolete files)
|
67.73 KB,
patch
|
Details | Diff | Splinter Review | |
|
31.56 KB,
patch
|
Ms2ger
:
review+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
68.51 KB,
patch
|
mayhemer
:
review+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #736731 +++
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:14.0) Gecko/20120316 Firefox/14.0a1
Build ID: 20120316031151
Steps to reproduce:
Logged into my Hotmail account. Hotmail no longer automatically updates the list of emails and count in title bar. Does so in IE.
Expected results:
The web page should have checked for updates.
Attachment #632843 -
Flags: review?(jst)
Attachment #632843 -
Flags: approval-mozilla-release?
Comment 1•14 years ago
|
||
Comment on attachment 632843 [details] [diff] [review]
v1
- In dom/interfaces/base/nsIDOMWindow.idl:
@@ -500,16 +500,21 @@ interface nsIDOMWindow : nsISupports
readonly attribute long long mozAnimationStartTime;
/**
* @see <http://dev.w3.org/2006/webapi/FileAPI/#creating-revoking>
*/
readonly attribute nsIDOMMozURLProperty URL;
/**
+ * Global storage, accessible by domain.
+ */
+ readonly attribute nsIDOMStorageList globalStorage;
Given that we're taking this on the release branch we'll need to create a new interface, i.e. something like nsIDOMWindow_globalStorage (in the same idl file is fine), inheriting only from nsISupports, and make nsGlobalWindow implement that interface (i.e. inherit from it, and add it to the QI map in nsGlobalWindow.cpp), and then add that interface to DOM_CLASSINFO_WINDOW_MAP_ENTRIES in nsDOMClassInfo.cpp. That way we'll be binary compatible with what we've already released.
- In dom/interfaces/storage/nsPIDOMStorage.h
We should at the very least update the IID for this interface. If we do that, I'd be comfortable shipping this, even if we're technically changing an interface here as well. The alternative is to create a new interface here, but that means we'd need to change the value of the enums to something it's never been before, and I think that scares me more than shipping a changed IID to this interface.
r=jst with that.
Attachment #632843 -
Flags: review?(jst) → review+
Updated•14 years ago
|
Attachment #632843 -
Flags: approval-mozilla-release? → approval-mozilla-release+
| Assignee | ||
Comment 2•14 years ago
|
||
- according the review comments
- not sure whether to change iid of nsIDOMWindow now...
Attachment #632971 -
Flags: review?(jst)
| Assignee | ||
Comment 3•14 years ago
|
||
Comment 4•14 years ago
|
||
Comment on attachment 632971 [details] [diff] [review]
INTERDIFF v1 -> v1.1
We should leave the nsIDOMWindow IID *unchanged*, so please revert that, and this is good to go!
Attachment #632971 -
Flags: review?(jst) → review+
| Assignee | ||
Comment 5•14 years ago
|
||
Attachment #632972 -
Attachment is obsolete: true
| Assignee | ||
Updated•14 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•14 years ago
|
Target Milestone: --- → mozilla13
Comment 6•14 years ago
|
||
Looks all green on tbpl. Marking fixed for 13. Thanks Honza for the very quick turnaround!
Verified fixed in Firefox 13.0.1.
Editing summary to avoid confusion.
Summary: Hotmail no longer auto-updates (due to "globalStorage" removal) → Temporary fix for: Hotmail no longer auto-updates (due to "globalStorage" removal)
Comment 9•14 years ago
|
||
Can we do the same to FF14? It sounds like MS may not have a fix for bug 736731 prior.
status-firefox14:
--- → affected
tracking-firefox14:
--- → +
| Assignee | ||
Comment 10•14 years ago
|
||
Attachment #635333 -
Flags: review?(Ms2ger)
| Assignee | ||
Comment 11•14 years ago
|
||
This is actually identical to v1.1 for the release channel, so no need for re-review. Only change that needed to merge was the introduced patch from bug 762409.
Attachment #632843 -
Attachment is obsolete: true
Attachment #632971 -
Attachment is obsolete: true
Attachment #635334 -
Flags: review+
Comment 12•14 years ago
|
||
Comment on attachment 635333 [details] [diff] [review]
revert patches from bug 732708 from beta
Review of attachment 635333 [details] [diff] [review]:
-----------------------------------------------------------------
Haven't looked carefully, but nothing obviously wrong.
Attachment #635333 -
Flags: review?(Ms2ger) → review+
| Assignee | ||
Updated•14 years ago
|
Attachment #635333 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•14 years ago
|
Attachment #635334 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 13•14 years ago
|
||
Comment on attachment 635333 [details] [diff] [review]
revert patches from bug 732708 from beta
This patch effectively backs changesets: 17696f172c01, a188746249cd, 0d871550085e out of m-b.
Updated•14 years ago
|
Attachment #635333 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 14•14 years ago
|
||
Comment on attachment 635334 [details] [diff] [review]
v1.1 for the beta channel
Approving for landing, will add qawanted to this bug to check mozilla-beta tinderbox builds after this lands and confirm that 14 matches up with expecations before next Tuesday's go to build.
Attachment #635334 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
| Assignee | ||
Comment 15•14 years ago
|
||
Comment on attachment 635333 [details] [diff] [review]
revert patches from bug 732708 from beta
https://hg.mozilla.org/releases/mozilla-beta/rev/421bb7a891ba
| Assignee | ||
Comment 16•14 years ago
|
||
Comment on attachment 635334 [details] [diff] [review]
v1.1 for the beta channel
https://hg.mozilla.org/releases/mozilla-beta/rev/03e87f48a3b9
| Assignee | ||
Updated•14 years ago
|
Comment 17•14 years ago
|
||
errrr, string changes?
Comment 18•14 years ago
|
||
(In reply to Honza Bambas (:mayhemer) from comment #15)
> Comment on attachment 635333 [details] [diff] [review]
> revert patches from bug 732708 from beta
>
> https://hg.mozilla.org/releases/mozilla-beta/rev/421bb7a891ba
(In reply to Honza Bambas (:mayhemer) from comment #16)
> Comment on attachment 635334 [details] [diff] [review]
> v1.1 for the beta channel
>
> https://hg.mozilla.org/releases/mozilla-beta/rev/03e87f48a3b9
Both backed out for failures in test_domstorage.xul@
https://tbpl.mozilla.org/?tree=Mozilla-Beta&rev=03e87f48a3b9
https://hg.mozilla.org/releases/mozilla-beta/rev/3b924d3422d6
Comment 19•14 years ago
|
||
Isn't this fixed by Microsoft or not? (I'm confused)
see bug 736731 comment 37
Comment 20•14 years ago
|
||
Yes, I can confirm that we pushed a fix and validated on 13 and 14. I was assuming 14 did not have the patch from Mozilla that would mask the need for the change.
Do we need to check on 15?
Comment 21•14 years ago
|
||
Inbox is auto-updating fine, but Junk folder isn't. Tested on FF 14b10 and Nightly 16.0a1 (2012-07-02) on Win 7/64.
| Assignee | ||
Comment 22•14 years ago
|
||
Raul, can you please confirm Paul's results?
globalStorage feature *is* present on Firefox 13.0.1 only. globalStorage *is not* present on any newer version of Firefox.
Comment 23•14 years ago
|
||
I tested this by sending email from two different accounts to my hotmail.com account. One of the emails would always go into my inbox and the other would always go into the junk folder.
In addition I tested the MSN Messenger functionality online.
On Fx13.0 the inbox and junk folder auto updated and MNN Messenger worked.
On Fx13.0.1 the inbox and junk folder auto updated and MSN Messenger worked.
On Fx14.0b11 (latest) the inbox and junk folder auto updated and MSN Messenger worked.
On Fx15.0a2 (latest) neither the inbox nor the junk folder auto updated, but MSN Messenger worked.
Comment 24•14 years ago
|
||
(In reply to juan becerra [:juanb] from comment #23)
> On Fx14.0b11 (latest) the inbox and junk folder auto updated and MSN
> Messenger worked.
>
> On Fx15.0a2 (latest) neither the inbox nor the junk folder auto updated, but
> MSN Messenger worked.
Honza - this is unexpected behavior, no? Given the positive testing with 14.0, we'll untrack there. But I'm moving the tracking flag to 15 to make sure we understand what's going on prior to release.
tracking-firefox15:
--- → +
| Assignee | ||
Comment 25•14 years ago
|
||
Yes, that is strange. I'll create a hotmail account and try to reproduce. It could be a completely different bug, though.
Comment 26•14 years ago
|
||
Could be an issue with our fix against 15. I'll investigate on our side.
Comment 27•14 years ago
|
||
Hi folks,
Just verified on Aurora 15.0a2 (2012-07-11) and no repro.
The message list in the Inbox correctly auto-updates.
Should I try with different build?
| Assignee | ||
Comment 28•14 years ago
|
||
(In reply to Raul D @ Microsoft from comment #27)
> Hi folks,
>
> Just verified on Aurora 15.0a2 (2012-07-11) and no repro.
> The message list in the Inbox correctly auto-updates.
Cool. Thanks! Why do you think you observed a failure before? Could that be some random issue?
>
> Should I try with different build?
If you have time now, try the nightly (Fx16) at http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-central/ just to be sure, but I expect it to work, there are no major differences from Fx15 according DOM storage.
Comment 29•14 years ago
|
||
(In reply to Honza Bambas (:mayhemer) from comment #28)
> (In reply to Raul D @ Microsoft from comment #27)
> > Hi folks,
> >
> > Just verified on Aurora 15.0a2 (2012-07-11) and no repro.
> > The message list in the Inbox correctly auto-updates.
>
> Cool. Thanks! Why do you think you observed a failure before? Could that
> be some random issue?
>
> >
> > Should I try with different build?
>
> If you have time now, try the nightly (Fx16) at
> http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-
> central/ just to be sure, but I expect it to work, there are no major
> differences from Fx15 according DOM storage.
Per comments 23, 25, I understood you still saw an issue on FF 15. I can't repro.
I verified no repro on Nightly FF 16 either.
Cheers
Comment 30•14 years ago
|
||
Per meeting discussion today, removing qawanted. Please re-add if there's something more QA can do here.
Keywords: qawanted
Whiteboard: [qa+:ashughes]
Comment 31•14 years ago
|
||
[Triage Comment]
Untracking for 15 as per comment 29.
status-firefox15:
--- → unaffected
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•