Bug 764546 - Hotmail no longer auto-updates (due to 'globalStorage' removal), r=jst, a=akeybl CLOSED TREE