dom/base/nsGlobalWindow.h
@@ -99,6 +99,7 @@
 #include "mozilla/TimeStamp.h"
 #include "nsIDOMTouchEvent.h"
 #include "nsIInlineEventHandlers.h"
+#include "nsIDOMWindow_globalStorage.h"
 
 // JS includes
 #include "jsapi.h"
@@ -282,7 +283,8 @@ class nsGlobalWindow : public nsPIDOMWindow,
                        public PRCListStr,
                        public nsIDOMWindowPerformance,
                        public nsITouchEventReceiver,
-                       public nsIInlineEventHandlers
+                       public nsIInlineEventHandlers,
+                       public nsIDOMWindow_globalStorage
 {
 public:
   friend class nsDOMMozURLProperty;
@@ -336,6 +338,9 @@ public:
 
   // nsIDOMWindow
   NS_DECL_NSIDOMWINDOW
+
+  // nsIDOMWindow_globalStorage
+  NS_DECL_NSIDOMWINDOW_GLOBALSTORAGE
 
   // nsIDOMWindowPerformance
   NS_DECL_NSIDOMWINDOWPERFORMANCE
@@ -1019,6 +1024,7 @@ protected:
   friend class nsDOMScriptableHelper;
   friend class nsDOMWindowUtils;
   friend class PostMessageEvent;
+  static nsIDOMStorageList *sGlobalStorageList;
 
   static WindowByIdTable* sWindowsById;
   static bool sWarnedAboutWindowInternal;
